Fixed right pane text overflowing

--- a/style/teacherstyle.css
+++ b/style/teacherstyle.css
@@ -281,7 +281,7 @@ main > div {
   font-size: 1.5rem;
   gap: 2rem;
   padding: 2rem;
-  white-space: pre;
+  white-space: pre-wrap;
   width: 20%;
 }
 
